# Group6-Rocket-ENGR301-302

./: .gitlab-ci.yml  .mailmap  Communication-Protocol.md  Cost_Management.rtf  Cost_Management.txt  Dockerfile  HardwareChangeLog.md  InitialPartsList.md  LICENSE  PartsList.md  Peer-Matrix.txt  README.md  branch_comments  hardwareWorkLog
Dockerfiles/: kicad_dockerfile  software_dockerfile
Documentation/: Peer-Matrix.txt
Documentation/architecture_design/: architecture-design.md
Documentation/project_requirement/: project-requirement.md
Extra files/: HardwareChangeLog.md  InitialPartsList  PartsList.md
Gimbal Parts/: ReadMe.md  ServoAdapter.SLDPRT
Gimbal_Design/: ServoManual.txt
Hardware Development/Hardware Work Flow/: Investigation of PWM Interrupts
Hardware Work Flow/: ServoOsc  branch_comments
Hardware_Development/Hardware Work Flow/: Block Diagram
Retrospective Docs/: Dialogue2.txt
Software/: README.md  platformio_workspace_paths.txt
Software Development/Hello/: CMakeListsPrivate.txt
Software Development/Sun_Incinerator_Rocket_Controller/: .gitignore  CMakeLists.txt
Software/Hello/: .gitignore  CMakeLists.txt  platformio.ini
Software/MicroSDCardSample/: platformio.ini
Software_Development/: README.md  software_runner.py
architecture_design/: architecture-design.md
project_requirement/: project-requirement.md
software/: TestFileName.txt  platformio_workspace_paths.txt  software_runner.py
software/Prototype/Rocket_Control/: CMakeLists.txt  main.cpp
software/Prototype/Rocket_Control/lib/: RocketControl.cpp  RocketControl.h
(+81 files in other folders)
